@@ -808,19 +808,10 @@ static SEXP dimnamesgets1(SEXP val1)
     if (LENGTH(val1) == 0) return R_NilValue;
     /* if (isObject(val1)) dispatch on as.character.foo, but we don't
        have the context at this point to do so */
-    if (inherits(val1, "factor")) { /* mimic as.character.factor */
-	int i, n = LENGTH(val1);
-	SEXP labels = getAttrib(val1, install("levels"));
-	PROTECT(this2 = allocVector(STRSXP, n));
-	for(i = 0; i < n; i++) {
-	    int ii = INTEGER(val1)[i];
-	    SET_STRING_ELT(this2, i,
-			   (ii == NA_INTEGER) ? NA_STRING
-			   : STRING_ELT(labels, ii - 1));
-	}
-	UNPROTECT(1);
-	return this2;
-    }
+
+    if (inherits(val1, "factor"))  /* mimic as.character.factor */
+        return asCharacterFactor(val1);
+
     if (!isString(val1)) { /* mimic as.character.default */
 	PROTECT(this2 = coerceVector(val1, STRSXP));
 	SET_ATTRIB(this2, R_NilValue);
